* Updated the ingame issue tracker link to go directly to the issues page
* Slightly lowered the chance for Gravitational Anomalies to generate from 5% to 3.33%
* Changed the Cobblestone Circuit Mold recipe to require a Chisel Head Cast instead of using chisels. This is due to limitations on using damaged chisels
* Add salt block -> brine melter recipe (#714)

Mod Updates:
* Apotheosis (1.10.0)
* Barrels, Drums, Storage, and More (0.0.24)
* NuclearCraft (2.16f)
* Weirding Gadgets (2.1.16)
* FastWorkbench (1.7.1)


---------------------------------------------------------------------

4.0.5

Bug Fixes:
* Removed Dragon spawning from all worlds minus Sky Grid

Enhancements:
* Changed the fertile soil in the Bonsai Pots for the Compact Machine World
* Increased the size of the Hunting Dimension and Lost Cities Compact Machine world structures to be 19x19x19 with a transparent roof (If you want to use these new sizes you will have to remove and regenerate these dimensions in your world)
* Removed the Triumph Dragon Kill function as it was replaced with a mod that can more effectively perform this mechanic

Mods Added:
* DragonMurder-1.12.2-1.0.0

Mod Updates:
* ComPatchedStorage-1.12.2-1.6.0


---------------------------------------------------------------------

4.0.4

Bug Fixes:
* Removed some BDS&M blacklisted oredicts
* Blacklisted items from uncrafting grinder to prevent exploits
* Blacklist file cabinet from attaching to crafting station to avoid a visual glitch
* Tweaked Telepastry alternative recipes to match the primary one
* Disabled Twilight Forest Uncrafting Table to prevent exploits
* Remove un-unified Amber Mekanism crushing recipes
* Prevent player picking up Mekanism Bounding Box using Carry On (#748)
* Prevent player picking up any blocks from OpenComputers (#686, #724)
* Prevent player picking up screens from Practical Logistics (#639)
* Prevent player picking up translocator pairs (#504)
* Prevent player picking up blocks from RFToolsPower (#579)