@@ -472,7 +472,7 @@ General {
     B:EnableSaddleCrafting=true
 
     # If TRUE, Fire-Immune mobs have a chance to drop Sulfur. [default: true]
-    B:FireImmuneMobsDropSulfur=true
+    B:FireImmuneMobsDropSulfur=false
 }
 
 
